--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "express-session": "^1.17.1",
         "mongodb": "^3.6.2",
         "mongoose": "^5.10.9",
+        "multer": "^1.4.2",
         "nodemon": "^2.0.7",
         "pug": "^3.0.0"
     }
